# llm-response-analyzer

./: README.md  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml  users.json
backend/app/: main.py
backend/app/api/v1/: config.py  files.py  reports.py  router.py  tasks.py
backend/app/auth/: auth.py  jwt.py  revocation.py  router.py  schemas.py  settings.py
backend/app/core/: config.py
backend/app/files/: __init__.py
backend/app/models/: report.py  task.py  user.py
backend/app/reports/: index.py
backend/app/schemas/: report.py  task.py  user.py
backend/app/services/: ai.py  calculation.py
backend/app/services/providers/: __init__.py
backend/app/utils/: password.py  security.py
frontend/: README.md  data.cvs  data2.cvs  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: auth.ts
frontend/src/store/: model.ts  store.ts
frontend/src/views/: HomeView.tsx  LoginView.tsx
frontend/src/widgets/Auth/: LoginScreen.tsx  store.ts
frontend/src/widgets/Calculation/: api.ts  index.tsx  store.ts
frontend/src/widgets/Calculation/ui/file/: index.tsx
frontend/src/widgets/Calculation/ui/strategy/: index.tsx
frontend/src/widgets/Report/: index.tsx
src/: App.tsx
src/components/: mode-toggle.tsx
src/lib/: utils.ts
src/store/: index.tsx  model.ts  store.ts  utils.tsx
src/widgets/Calculation/: store.ts
src/widgets/Calculation/ui/ai-select-list/: index.tsx
src/widgets/Calculation/ui/file/: index.tsx  store.ts
src/widgets/Calculation/ui/strategy/: index.tsx
