[project]
name = "llm_response_analyzer_backend"
version = "0.1.0"
description = "FastAPI backend for LLM Response Analyzer"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic-settings"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[project.scripts]
start = "uvicorn app.main:app --reload"
