[project]
name = "llm_response_analyzer_backend"
version = "0.1.0"
description = "FastAPI backend for LLM Response Analyzer"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic-settings",
    "openai>=1.3.0",
    "httpx>=0.27.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

